hphp/test/zend/good/ext/standard/tests/strings/bug37262.php
<?php
$func = create_function('$a', 'return $a;');
var_export($func);
?>