hphp/test/zend/bad/ext-gd/imagestringup_error2.php
<?php

$result = imagestringup(tmpfile(), 1, 5, 5, 'String', 1);

?>